--- a/packages/flutter_distributor/pubspec.yaml
+++ b/packages/flutter_distributor/pubspec.yaml
@@ -19,8 +19,10 @@ dependencies:
   charset: ^2.0.1
   dio: ^5.3.4
   flutter_app_builder: ^0.3.7
-  flutter_app_packager: ^0.3.7
-  flutter_app_publisher: ^0.4.0
+  flutter_app_packager: 
+    path: ../flutter_app_packager
+  flutter_app_publisher: 
+    path: ../flutter_app_publisher
   logging: ^1.0.2
   path: ^1.8.1
   pubspec_parse: ^1.1.0
