--- a/packages/flutter_distributor/pubspec.yaml
+++ b/packages/flutter_distributor/pubspec.yaml
@@ -34,5 +34,12 @@ dev_dependencies:
   dependency_validator: ^3.0.0
   test: ^1.23.1
 
+flutter:
+
+  assets:
+    - assets/msvcp140.dll
+    - assets/vcruntime140_1.dll
+    - assets/vcruntime140.dll
+
 executables:
   flutter_distributor: main
